--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: cachefilesd
 Section: misc
 Priority: optional
 Maintainer: Shane Wegner <shane@debian.org>
-Build-Depends: cdbs, debhelper (>= 7)
-Standards-Version: 3.9.3.1
+Build-Depends: debhelper (>= 9), dh-systemd (>= 1.5)
+Standards-Version: 3.9.6
 
 Package: cachefilesd
 Architecture: any
